--- a/style.css
+++ b/style.css
@@ -1,586 +1,10 @@
-
-element.style {
+.socialbar .socialbar__item--enabled .btn--twitter {
+    background-color: #55acee;
 }
-#innerWrapper {
-    position: relative;
-    width: 63.5625em;
-    padding: 0 6px;
-    background-color: #fff;
+.socialbar .socialbar__item--enabled .btn--twitter {
+    background-color: #55acee;
 }
 
-*, :before, :after {
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
-user agent stylesheet
-div {
-    display: block;
-}
-html {
-    font-size: 16px;
-    font-family: "Gotham XNarrow","Avenir Next Condensed",sans-serif-condensed,"Arial Narrow","Arial Nova",sans-serif;
-    line-height: 1.4;
-    height: 100%;
-    color: #000;
-    -moz-osx-font-smoothing: grayscale;
-    -webkit-font-smoothing: antialiased;
-}
-*, :before, :after {
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
-*, :before, :after {
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
-
-
-
-
-.main-nav>header {
-    position: relative;
-    font-size: .846em;
-    font-weight: 700;
-}
-article, aside, details, figcaption, figure, footer, header, nav, main, section, summary {
-    display: block;
-}
-*, :before, :after {
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
-user agent stylesheet
-header {
-    display: block;
-}
-.main-nav {
-    position: relative;
-    max-width: 993px;
-    background: #fff;
-    text-transform: uppercase;
-    margin: 0 auto;
-    padding-top: .923em;
-    z-index: 6501;
-}
-html {
-    font-size: 16px;
-    font-family: "Gotham XNarrow","Avenir Next Condensed",sans-serif-condensed,"Arial Narrow","Arial Nova",sans-serif;
-    line-height: 1.4;
-    height: 100%;
-    color: #000;
-    -moz-osx-font-smoothing: grayscale;
-    -webkit-font-smoothing: antialiased;
-}
-.faux:before, .nav-meta:before, .nav-footer:before, .hentry:before, .partnerteaser:before, .partnerteaser--brand:before, .content>section:before, .content aside>section:before, .content article:before, .module:before, .main-drop:before, .breakingnews .holder:before, .fishfinger .holder:before, article:before, .txt:before, .tsr-ktg-txt:before, .tsr-mfb:before, .tsr-singleimg:before, .tsr-info:before, .quote:before, .contentbar:before, .fullbanner:before, .promotion:before, .promotion.floatR .promotion_collection:before, .promotion.center .promotion_collection:before, .headline-overview-block:before, .teaser-overview-block:before, .gallery:before, .ktg-entry:before, .swiper-container .swiper-wrapper:before, .newsticker-item:before, .accordion-item:before, .newsticker-content:before, .accordion-content:before, .stream-list:before, .stream-item:before, .stream-body:before, .stream-livebar:before, .overflow-wrapper:before, .overflow-gallery:before, .topic-nav:before, .ubrpopup__content:before, .clearfix:before, .faux:after, .nav-meta:after, .nav-footer:after, .hentry:after, .partnerteaser:after, .partnerteaser--brand:after, .content>section:after, .content aside>section:after, .content article:after, .module:after, .main-drop:after, .breakingnews .holder:after, .fishfinger .holder:after, article:after, .txt:after, .tsr-ktg-txt:after, .tsr-mfb:after, .tsr-singleimg:after, .tsr-info:after, .quote:after, .contentbar:after, .fullbanner:after, .promotion:after, .promotion.floatR .promotion_collection:after, .promotion.center .promotion_collection:after, .headline-overview-block:after, .teaser-overview-block:after, .gallery:after, .ktg-entry:after, .swiper-container .swiper-wrapper:after, .newsticker-item:after, .accordion-item:after, .newsticker-content:after, .accordion-content:after, .stream-list:after, .stream-item:after, .stream-body:after, .stream-livebar:after, .overflow-wrapper:after, .overflow-gallery:after, .topic-nav:after, .ubrpopup__content:after, .clearfix:after {
-    content: "";
-    display: table;
-}
-*, :before, :after {
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
-.faux:after, .nav-meta:after, .nav-footer:after, .hentry:after, .partnerteaser:after, .partnerteaser--brand:after, .content>section:after, .content aside>section:after, .content article:after, .module:after, .main-drop:after, .breakingnews .holder:after, .fishfinger .holder:after, article:after, .txt:after, .tsr-ktg-txt:after, .tsr-mfb:after, .tsr-singleimg:after, .tsr-info:after, .quote:after, .contentbar:after, .fullbanner:after, .promotion:after, .promotion.floatR .promotion_collection:after, .promotion.center .promotion_collection:after, .headline-overview-block:after, .teaser-overview-block:after, .gallery:after, .ktg-entry:after, .swiper-container .swiper-wrapper:after, .newsticker-item:after, .accordion-item:after, .newsticker-content:after, .accordion-content:after, .stream-list:after, .stream-item:after, .stream-body:after, .stream-livebar:after, .overflow-wrapper:after, .overflow-gallery:after, .topic-nav:after, .ubrpopup__content:after, .clearfix:after {
-    clear: both;
-}
-.faux:before, .nav-meta:before, .nav-footer:before, .hentry:before, .partnerteaser:before, .partnerteaser--brand:before, .content>section:before, .content aside>section:before, .content article:before, .module:before, .main-drop:before, .breakingnews .holder:before, .fishfinger .holder:before, article:before, .txt:before, .tsr-ktg-txt:before, .tsr-mfb:before, .tsr-singleimg:before, .tsr-info:before, .quote:before, .contentbar:before, .fullbanner:before, .promotion:before, .promotion.floatR .promotion_collection:before, .promotion.center .promotion_collection:before, .headline-overview-block:before, .teaser-overview-block:before, .gallery:before, .ktg-entry:before, .swiper-container .swiper-wrapper:before, .newsticker-item:before, .accordion-item:before, .newsticker-content:before, .accordion-content:before, .stream-list:before, .stream-item:before, .stream-body:before, .stream-livebar:before, .overflow-wrapper:before, .overflow-gallery:before, .topic-nav:before, .ubrpopup__content:before, .clearfix:before, .faux:after, .nav-meta:after, .nav-footer:after, .hentry:after, .partnerteaser:after, .partnerteaser--brand:after, .content>section:after, .content aside>section:after, .content article:after, .module:after, .main-drop:after, .breakingnews .holder:after, .fishfinger .holder:after, article:after, .txt:after, .tsr-ktg-txt:after, .tsr-mfb:after, .tsr-singleimg:after, .tsr-info:after, .quote:after, .contentbar:after, .fullbanner:after, .promotion:after, .promotion.floatR .promotion_collection:after, .promotion.center .promotion_collection:after, .headline-overview-block:after, .teaser-overview-block:after, .gallery:after, .ktg-entry:after, .swiper-container .swiper-wrapper:after, .newsticker-item:after, .accordion-item:after, .newsticker-content:after, .accordion-content:after, .stream-list:after, .stream-item:after, .stream-body:after, .stream-livebar:after, .overflow-wrapper:after, .overflow-gallery:after, .topic-nav:after, .ubrpopup__content:after, .clearfix:after {
-    content: "";
-    display: table;
-}
-
-*, :before, :after {
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
-::selection {
-    background: #000;
-    color: #fff;
-}
-
-
-.desktop article>header {
-    margin: auto;
-}
-article>header {
-    padding: 36px 0 12px;
-}
-
-article>header {
-    margin-left: -144px;
-    margin-right: -144px;
-}
-article>header {
-    padding-bottom: 24px;
-}
-article>header {
-    padding-bottom: 12px;
-}
-article, aside, details, figcaption, figure, footer, header, nav, main, section, summary {
-    display: block;
-}
-*, :before, :after {
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
-
-header {
-    display: block;
-}
-
-
-.desktop .tsr-mfb img, .desktop .tsr-singleimg img, .desktop .tsr-singleimg img {
-    max-width: 100%;
-}
-
-.zoomable[data-zoom-src] {
-    cursor: pointer;
-}
-.tsr-img>.photo, .tsr-img.portrait>.photo, .tsr-img.quad>.photo, .tsr7 .tsr-img>.photo, .tsr7s .tsr-img>.photo, .tsr7t .tsr-img>.photo, .gallery .tsr-img.portrait>.photo, .gallery .tsr-img.portrait.icon-minify>.photo, .newsticker-img>.photo, .accordion-img>.photo, .newsticker-img.icon-minify>.photo, .icon-minify.accordion-img>.photo, .newsticker-img.portrait>.photo, .portrait.accordion-img>.photo, .newsticker-img.portrait.icon-minify>.photo, .portrait.icon-minify.accordion-img>.photo, .responsive-embed iframe, .countdown-timer a .photo {
-    display: block;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    margin: 0;
-    padding: 0;
-}
-img {
-    max-width: none;
-}
-img {
-    display: block;
-    border: 0;
-    vertical-align: bottom;
-    max-width: 100%;
-    height: auto;
-}
-*, :before, :after {
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
-img[Attributes Style] {
-    width: 1280px;
-}
-
-
-
-element.style {
-}
-.element--full .tsr-mfb figcaption, .element--full .tsr-singleimg figcaption {
-    padding-left: 144px;
-    padding-right: 144px;
-}
-
-.element--full .tsr-mfb figcaption, .element--full .tsr-singleimg figcaption {
-    padding-left: 72px;
-    padding-right: 72px;
-}
-.element--full .tsr-mfb figcaption, .element--full .tsr-singleimg figcaption {
-    padding-left: 12px;
-    padding-right: 12px;
-}
-.element--full .tsr-mfb figcaption, .element--full .tsr-singleimg figcaption {
-    padding-left: 18px;
-    padding-right: 18px;
-}
-.element--full .tsr-mfb figcaption, .element--full .tsr-singleimg figcaption {
-    padding-left: 144px;
-    padding-right: 144px;
-}
-.element--full .tsr-mfb figcaption, .element--full .tsr-singleimg figcaption {
-    padding-left: 72px;
-    padding-right: 72px;
-}
-.tsr-mfb figcaption, .tsr-singleimg figcaption {
-    padding-bottom: 0;
-}
-.tsr-mfb figcaption, .tsr-singleimg figcaption {
-    padding-left: 0;
-    padding-right: 0;
-}
-.tsr-mfb figcaption, .tsr-singleimg figcaption {
-    font-size: 1.125rem;
-    line-height: 1.5rem;
-}
-.tsr-mfb figcaption, .tsr-singleimg figcaption {
-    font-size: 1rem;
-    line-height: 1.375rem;
-}
-.tsr-mfb figcaption, .tsr-singleimg figcaption {
-    font-size: 1rem;
-    line-height: 1.25rem;
-    font-weight: 700;
-    color: #000;
-    display: block;
-    margin-top: 12px;
-    padding-bottom: 0;
-    padding-left: 18px;
-    padding-right: 18px;
-}
-article, aside, details, figcaption, figure, footer, header, nav, main, section, summary {
-    display: block;
-}
-*, :before, :after {
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
-user agent stylesheet
-figcaption {
-    display: block;
-}
-
-
-.article-is-centered .article-meta, .article-is-centered .txt, .article-is-centered .txt+.socialbar, .article-is-centered article>.element:not(.element--full) {
-    padding-left: 144px;
-    padding-right: 144px;
-}
-.desktop .article-meta {
-    padding-right: 344px;
-}
-*, :before, :after {
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
-user agent stylesheet
-div {
-    display: block;
-}
-html {
-    font-size: 16px;
-    font-family: "Gotham XNarrow","Avenir Next Condensed",sans-serif-condensed,"Arial Narrow","Arial Nova",sans-serif;
-    line-height: 1.4;
-    height: 100%;
-    color: #000;
-    -moz-osx-font-smoothing: grayscale;
-    -webkit-font-smoothing: antialiased;
-}
-
-.nav-meta {
-    background-color: transparent;
-    color: #454545;
-    text-align: center;
-    padding-left: 144px;
-    padding-right: 144px;
-}
-.nav-meta {
-    font-size: .875rem;
-    font-family: "Gotham XNarrow","Avenir Next Condensed",sans-serif-condensed,"Arial Narrow","Arial Nova",sans-serif;
-    color: #333;
-    padding: 12px;
-    margin-bottom: 0;
-    text-align: center;
-}
-dl, menu, ol, ul {
-    margin: 0 0 1em;
-    list-style-type: none;
-}
-*, :before, :after {
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
-user agent stylesheet
-ul {
-    display: block;
-    list-style-type: disc;
-    margin-block-start: 1em;
-    margin-block-end: 1em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    padding-inline-start: 40px;
-}
-
-.nav-meta {
-    background-color: transparent;
-    color: #454545;
-    text-align: center;
-    padding-left: 144px;
-    padding-right: 144px;
-}
-.nav-meta {
-    font-size: .875rem;
-    font-family: "Gotham XNarrow","Avenir Next Condensed",sans-serif-condensed,"Arial Narrow","Arial Nova",sans-serif;
-    color: #333;
-    padding: 12px;
-    margin-bottom: 0;
-    text-align: center;
-}
-dl, menu, ol, ul {
-    margin: 0 0 1em;
-    list-style-type: none;
-}
-*, :before, :after {
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
-user agent stylesheet
-ul {
-    display: block;
-    list-style-type: disc;
-    margin-block-start: 1em;
-    margin-block-end: 1em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    padding-inline-start: 40px;
-}
-
-.thumbnails-b .trc_rbox_header {
-    text-shadow: 1px 1px 0 #fff;
-    border-bottom: 1px solid #CED4DA;
-}
-
-.thumbnails-b .trc_rbox_border_elm {
-    border-color: darkgray;
-}
-
-.thumbnails-b .trc_rbox_header {
-    font-family: Gotham, Arial, Helvetica, Tahoma, sans-serif;
-    font-size: 22px;
-    font-weight: normal;
-    text-decoration: none;
-    color: #000000;
-    border-width: 0;
-    background: transparent;
-    border-style: none;
-    border-color: #D6D5D3;
-    padding: 0px 0px 3px 0px;
-    line-height: 110%;
-    display: block;
-    margin: 16px 0px 10px 0px;
-    position: relative;
-    background-color: transparent;
-    box-sizing: border-box;
-    height: 34px;
-    width: auto;
-    _width: auto;
-    text-align: left;
-    text-transform: uppercase;
-}
-
-.trc_rbox_header {
-    font-family: Arial,Helvetica,sans-serif;
-    font-size: 12px;
-    font-weight: 700;
-    text-decoration: none;
-    color: #000;
-}
-
-.trc_rbox_header {
-    border: 0 solid;
-    overflow: hidden;
-    vertical-align: middle;
-}
-
-*, :before, :after {
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
-user agent stylesheet
-div {
-    display: block;
-}
-
-.trc_related_container DIV.videoCube.thumbnail_bottom .thumbBlock, .trc_related_container DIV.videoCube.thumbnail_top .thumbBlock {
-    float: none;
-}
-.exchange-thumbnails-dokus-a .videoCube.syndicatedItem .thumbBlock {
-    border-color: darkgray;
-    border-width: 0px;
-}
-
-.exchange-thumbnails-dokus-a .videoCube .thumbBlock {
-    border-width: 0px;
-    border-color: darkgray;
-}
-
-.trc_elastic .videoCube .thumbBlock {
-    background: transparent no-repeat center center;
-    background-size: cover;
-    position: absolute;
-    display: inline-block;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    margin-left: 0;
-    margin-right: 0;
-}
-
-.videoCube a .thumbBlock {
-    float: left;
-    display: block;
-    overflow: hidden!important;
-}
-
-.exchange-thumbnails-dokus-a .thumbBlock {
-    margin: 0;
-}
-
-.videoCube .thumbBlock {
-    margin: 0;
-    border-style: solid;
-}
-
-.hola_preview_img {
-    visibility: hidden;
-}
-*, :before, :after {
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
-
-.txt>p, .txt>ul, .tsr-ktg-txt>p, .tsr-ktg-txt>ul {
-    line-height: 2rem;
-}
-.txt>p, .txt>ul, .tsr-ktg-txt>p, .tsr-ktg-txt>ul {
-    font-size: 1.3125rem;
-    color: #000;
-    line-height: 1.35;
-    padding-bottom: 2rem;
-}
-
-*, :before, :after {
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
-user agent stylesheet
-p {
-    display: block;
-    margin-block-start: 1em;
-    margin-block-end: 1em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-}
-
-.socialbar .socialbar__item--enabled .btn--facebook {
-    background-color: #2d4373;
-}
-.socialbar .socialbar__item--enabled .btn--facebook {
-    background-color: #3b5998;
-}
-.socialbar__item:first-child a {
-    margin-left: 0;
-}
-.socialbar .btn--icon {
-    background-color: #868e96;
-}
-.socialbar .btn--grow {
-    width: auto;
-    text-indent: 0;
-    padding-left: 40px;
-    padding-right: 1em;
-}
-.socialbar__item .btn--icon {
-    margin-left: 4px;
-}
-.socialbar__item .btn--icon {
-    margin-left: 2px;
-    background-color: #868e96;
-}
-.btn-reload, .btn-renew, .switch-imagesize, [rel=prev], [rel=next], .socialbar .btn--facebook, .socialbar .btn--twitter, .socialbar .btn--mail, .socialbar .btn--whatsapp, .socialbar .btn--messenger, .socialbar .btn--skype, .socialbar .btn--tumblr, .socialbar .btn--pinterest, .socialbar .btn--youtube, .socialbar .btn--hint, .socialbar .btn--comments {
-    text-indent: 120%;
-    white-space: nowrap;
-    overflow: hidden;
-}
-
-
-.gallery-box .socialbar a {
-    text-decoration: none;
-}
-.socialbar .btn--icon {
-    background-color: #868e96;
-}
-.socialbar .btn--grow {
-    width: auto;
-    text-indent: 0;
-    padding-left: 40px;
-    padding-right: 1em;
-}
-.socialbar__item .btn--icon {
-    margin-left: 4px;
-}
-.socialbar__item .btn--icon {
-    margin-left: 2px;
-    background-color: #868e96;
-}
-.btn-reload, .btn-renew, .switch-imagesize, [rel=prev], [rel=next], .socialbar .btn--facebook, .socialbar .btn--twitter, .socialbar .btn--mail, .socialbar .btn--whatsapp, .socialbar .btn--messenger, .socialbar .btn--skype, .socialbar .btn--tumblr, .socialbar .btn--pinterest, .socialbar .btn--youtube, .socialbar .btn--hint, .socialbar .btn--comments {
-    text-indent: 120%;
-    white-space: nowrap;
-    overflow: hidden;
-}
-.txt a, .tsr-ktg-txt a {
-    word-wrap: break-word;
-    overflow-wrap: break-word;
-}
-.btn--icon {
-    color: #fff;
-    display: block;
-    font-weight: 800;
-    font-family: "Gotham","Avenir Next","Helvetica Neue","Arial Narrow","Arial Nova",sans-serif;
-    height: 40px;
-    line-height: 40px;
-    overflow: hidden;
-    position: relative;
-    width: 40px;
-    text-align: center;
-    text-decoration: none;
-    border: 0;
-    -webkit-transition: background 100ms ease-in;
-    transition: background 100ms ease-in;
-}
-article a {
-    text-decoration: none;
-    border-bottom: 1px solid currentColor;
-}
-a {
-    color: inherit;
-    text-decoration: underline;
-    -webkit-tap-highlight-color: rgba(69,69,69,.6);
-}
-*, :before, :after {
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
-
-.socialbar .socialbar__item--enabled .btn--facebook {
-    background-color: #2d4373;
-}
-.socialbar .socialbar__item--enabled .btn--facebook {
-    background-color: #3b5998;
-}
-.socialbar__item:first-child a {
-    margin-left: 0;
-}
 .socialbar .btn--icon {
     background-color: #868e96;
 }
@@ -638,17 +62,4 @@ a:-webkit-any-link {
     color: -webkit-link;
     cursor: pointer;
     text-decoration: underline;
-}
-.socialbar__item {
-    -webkit-box-flex: 0;
-    -ms-flex: 0 0 auto;
-    flex: 0 0 auto;
-    text-align: center;
-}
-li {
-    list-style: none;
-}
-user agent stylesheet
-li {
-    text-align: -webkit-match-parent;
 }
